--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cap:init": "npx cap init SafeRove com.saferove.app --web-dir=dist",
+    "cap:add:android": "npx cap add android",
+    "cap:add:ios": "npx cap add ios",
+    "cap:copy": "npx cap copy",
+    "cap:open:android": "npx cap open android",
+    "cap:open:ios": "npx cap open ios",
+    "cap:sync": "npx cap sync"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.10",
@@ -75,7 +82,8 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.150.1",
     "vaul": "^0.9.9",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "@capacitor/core": "^6.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
